完成对用户登录次数的统计,统计了用户登录状态

--- a/config.properties
+++ b/config.properties
@@ -29,6 +29,7 @@ signing.password=xiaoli920529
 #   第10步：【signing.password】的密码则是以上步骤中输入的密码
 #
 #   生成GPG文件命令: gpg --export-secret-keys -o maven_0BA9F5AA_KEY.gpg
+#   秘钥全名：FC854C460BA9F5AA
 #
 signing.secretKeyRingFile=..\\maven_0BA9F5AA_KEY.gpg
 ossrhUsername=15198184721
