--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
 
     implementation 'androidx.multidex:multidex:2.0.1'
-//    implementation project(':LibDataCountKuaihuo')
+    implementation project(':LibDataCountKuaihuo')
     // LibDataCountKuaihuo 生成的库在maven上传的库。导入测试
-    implementation 'io.github.15198184721:KuaihuoDataCount:1.1'
+//    implementation 'io.github.15198184721:KuaihuoDataCount:1.1.2'
     //rxjava库
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
 }
