--- a/publish-mavencentral.gradle
+++ b/publish-mavencentral.gradle
@@ -14,9 +14,9 @@ buildscript {
         dokka_version = '1.4.10.2'
     }
     repositories {
-        jcenter()
         mavenCentral()
         google()
+        jcenter()
     }
     dependencies {
 
@@ -30,6 +30,7 @@ buildscript {
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
+//将源码打包为jar(如果不配置暂不清楚能否发布成功)
 task androidSourcesJar(type: Jar) {
     classifier = 'sources'
     from android.sourceSets.main.java.source
@@ -61,7 +62,7 @@ publishing {
             artifactId PUBLISH_ARTIFACT_ID
             version PUBLISH_VERSION
 
-            // Two artifacts, the `aar` and the sources
+            // 发布内容包含 .aar 库和打包的 .jar 源码资源
             artifact("$buildDir/outputs/aar/${project.getName()}-release.aar")
             artifact androidSourcesJar
 
@@ -70,7 +71,7 @@ publishing {
                 name = PUBLISH_ARTIFACT_ID
                 description = '用于AndroidHook的内部测试工具。用来hookAndroid的相关方法。只限应用内使用'
                 // If your project has a dedicated site, use its URL here
-                url = 'https://github.com/15198184721/KuaihuoExtFunction.git'
+                url = 'https://github.com/15198184721/KuaihuoDataCountApp.git'
                 licenses {
                     license {
                         //协议类型，一般默认Apache License2.0的话不用改：
@@ -88,10 +89,10 @@ publishing {
                 // Version control info, if you're using GitHub, follow the format as seen here
                 scm {
                     //修改成你的Git地址：
-                    connection = 'scm:git@github.com:15198184721/KuaihuoExtFunction.git'
-                    developerConnection = 'scm:git@github.com:15198184721/KuaihuoExtFunction.git'
+                    connection = 'scm:git@github.com:15198184721/KuaihuoDataCountApp.git'
+                    developerConnection = 'scm:git@github.com:15198184721/KuaihuoDataCountApp.git'
                     //分支地址：
-                    url = 'https://github.com/15198184721/KuaihuoExtFunction.git'
+                    url = 'https://github.com/15198184721/KuaihuoDataCountApp.git'
                 }
                 // A slightly hacky fix so that your POM will include any transitive dependencies
                 // that your library builds upon
