--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
+        maven { url("D:\\\\maven\\repo") }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.2"
@@ -21,6 +22,7 @@ allprojects {
         mavenCentral()
         maven { url "https://jitpack.io" }
         jcenter() // Warning: this repository is going to shut down soon
+        maven { url("D:\\\\maven\\repo") }
     }
 }
 
