--- a/publish-mavencentral.gradle
+++ b/publish-mavencentral.gradle
@@ -48,17 +48,19 @@ uploadArchives {
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
-//将源码打包为jar(如果不配置暂不清楚能否发布成功)
-task androidSourcesJar(type: Jar) {
-    classifier = 'sources'
-    from android.sourceSets.main.java.source
-}
 //已经在config.properties中配置
 //ext["signing.keyId"] = ''
 //ext["signing.password"] = ''
 //ext["signing.secretKeyRingFile"] = ''
 //ext["ossrhUsername"] = ''
 //ext["ossrhPassword"] = ''
+
+//将源码打包为jar(如果不配置暂不清楚能否发布成功)
+task androidSourcesJar(type: Jar) {
+    //打包源码(可选,此处配置为不打包源码)
+//    classifier = 'sources'
+//    from android.sourceSets.main.java.source
+}
 
 File secretPropsFile = project.rootProject.file('config.properties')
 if (secretPropsFile.exists()) {
@@ -80,7 +82,7 @@ publishing {
             artifactId PUBLISH_ARTIFACT_ID
             version PUBLISH_VERSION
 
-            // 发布内容包含 .aar 库和打包的 .jar 源码资源
+            //发布内容包含 .aar 库和打包的 .jar 源码资源
             artifact("$buildDir/outputs/aar/${project.getName()}-release.aar")
             artifact androidSourcesJar
 
