--- a/publish-mavencentral.gradle
+++ b/publish-mavencentral.gradle
@@ -82,9 +82,10 @@ publishing {
             artifactId PUBLISH_ARTIFACT_ID
             version PUBLISH_VERSION
 
-            //发布内容包含 .aar 库和打包的 .jar 源码资源
+            //发布内容包含 .aar 库
             artifact("$buildDir/outputs/aar/${project.getName()}-release.aar")
-            artifact androidSourcesJar
+            //发布打包的源码资源(注释掉：表示不上传源码资源)
+//            artifact androidSourcesJar
 
             // Self-explanatory metadata for the most part
             pom {
