修改Android12崩溃的问题

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,9 +62,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
 
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation project(':LibDataCountKuaihuo')
+//    implementation project(':LibDataCountKuaihuo')
     // LibDataCountKuaihuo 生成的库在maven上传的库。导入测试
-    implementation 'io.github.15198184721:KuaihuoDataCount:1.1.8'
+    implementation 'com.btfg.lk:KuaihuoDataCount:1.1.10'
     //rxjava库
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
 }
