--- a/LibDataCountKuaihuo/build.gradle
+++ b/LibDataCountKuaihuo/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
-        versionName "1.1.9"
+        versionName "1.1.10"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -42,7 +42,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common:2.3.1"
 
     //hook相关的库
-    api 'io.github.15198184721:AndroidSandHook:1.0'
+    api 'com.donews.lk:AndroidHook:1.1.1'
     //工具类
     implementation 'com.blankj:utilcodex:1.23.7'
     //rxjava库
@@ -64,7 +64,7 @@ dependencies {
 
 
 ext {
-    PUBLISH_GROUP_ID = "io.github.15198184721"  //申请的mven的GroupId
+    PUBLISH_GROUP_ID = "com.btfg.lk"  //申请的mven的GroupId
     PUBLISH_ARTIFACT_ID = 'KuaihuoDataCount'     //项目名
     PUBLISH_VERSION = android.defaultConfig.versionName  //版本号
 }
